# chicago-traffic

./: README.md  pyproject.toml
src/chicago_traffic/: client.py  models.py
tests/: test_client.py
