[project]
name = "chicago-traffic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

[tool.uv.sources]
chicago-traffic = { workspace = true }

[dependency-groups]
dev = [
    "chicago-traffic",
    "pytest>=9.0.3",
    "respx>=0.23.1",
]
